--- a/src/components/active-applications/active-applications.module.scss
+++ b/src/components/active-applications/active-applications.module.scss
@@ -1,24 +1,12 @@
 .pageContainer {
    display: flex;
    flex-direction: column;
-   height: 100vh;
-   width: 85vw;
    .wrapper {
-      display: flex;
-      flex-direction: column;
-      flex-grow: 1; // Позволяет занять всю доступную высоту
-      margin: 16px; // Добавляем немного отступа
-      background-color: white;
-      border: 1px solid #DEE0E3;
-      box-shadow: 0px 1px 2px 0px #14151A0D;
-      border-radius: 10px;
-      padding: 24px;
 
-      // Заголовок и кнопка внутри
       .topic {
          display: flex;
          justify-content: space-between;
-         align-items: center; // Центрируем элементы по вертикали
+         align-items: center; 
          width: 100%;
 
          h2 {
