--- a/src/components/tables/active-table/active-table.module.scss
+++ b/src/components/tables/active-table/active-table.module.scss
@@ -8,11 +8,21 @@
 .search {
    width: 100%;
    padding: 10px;
-   border: 1px solid #dee0e3;
-   border-bottom: none; /* Убираем нижнюю границу */
-   border-radius: 5px 5px 0 0; /* Закругления только сверху */
-   font-size: 16px;
+   border: none;
+   font-size: 14px;
    outline: none;
+   &::placeholder {
+      color: #0D112666;
+   }
+}
+
+.searchWrapper {
+   display: flex;
+   align-items: center;
+   border: 1px solid #DEE0E3;
+   border-bottom: none;
+   border-radius: 5px 5px 0 0;
+   padding-left: 16px;
 }
 
 .table {
