--- a/src/components/ui/page-title/page-title.module.scss
+++ b/src/components/ui/page-title/page-title.module.scss
@@ -2,70 +2,103 @@
   display: flex;
   width: 100%;
   justify-content: space-between;
-  // align-items: center;
+
   .title {
     font-size: 30px;
     font-weight: 600;
     color: #14151a;
   }
+
   .backArrow {
     cursor: pointer;
     height: 32px;
     width: 24px;
     margin-top: 5px;
   }
+
   .statuses {
     display: flex;
     margin-left: 8px;
     gap: 5px;
   }
+
   .status1 {
     border-radius: 8px;
     padding: 4px 6px;
+
     p {
       font-weight: 500;
       font-size: 14px;
     }
   }
+
+  // Цветовые классы
   .purple {
     background-color: #ecdffb;
+
     p {
       color: #5314a3;
     }
+
+    &.bordered {
+      border: 1px solid #0A0F2914; // Граница для purple
+    }
   }
+
   .orange {
     background-color: #fdead8;
+
     p {
       color: #ae590a;
     }
+
+    &.bordered {
+      border: 1px solid #0A0F2914; // Граница для orange
+    }
   }
+
   .blue {
     background-color: #e3eafd;
+
     p {
       color: #133a9a;
     }
+
+    &.bordered {
+      border: 1px solid #0A0F2914; // Граница для blue
+    }
   }
+
   .green {
     background-color: #d1fae4;
+
     p {
       color: #166e3f;
     }
+
+    &.bordered {
+      border: 1px solid #0A0F2914; // Граница для green
+    }
   }
+
   .top {
     display: flex;
     align-items: center;
   }
+
   .right {
     margin-left: 10px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
   }
+
   .bott {
     display: flex;
     gap: 4px;
     margin-top: 10px;
   }
+
   .infoBlock {
     width: auto;
     display: flex;
@@ -73,23 +106,37 @@
     padding: 6px 10px;
     border: 1px solid #DEE0E3;
     border-radius: 10px;
+
     .svg {
       margin-left: 4px;
       display: flex;
       align-items: center;
       justify-content: center;
     }
+
     p {
       margin-left: 7px;
     }
   }
+
   .globalLeft {
     display: flex;
   }
+
   .rightBtns {
-    width: 20vw;
+    width: 25vw;
     display: flex;
     justify-content: flex-end;
     gap: 7px;
+  }
+
+  .statusesBtnDiv {
+    position: relative;
+  }
+}
+.bordered {
+  padding: 2px 4px !important;
+  p {
+    font-size: 12px !important;
   }
 }
