--- a/src/layouts/panel-layout/panel-layout.module.scss
+++ b/src/layouts/panel-layout/panel-layout.module.scss
@@ -3,7 +3,13 @@
 
 }
 .content {
+   display: flex;
+   flex-direction: column;
+   flex-grow: 1;
+   margin: 16px;
+   background-color: white;
+   border: 1px solid #DEE0E3;
+   box-shadow: 0px 1px 2px 0px #14151A0D;
+   border-radius: 10px;
    padding: 24px;
-   background-color: #FFFFFF;
-   width: 100%;
 }
