--- a/src/components/ui/page-title/page-title.module.scss
+++ b/src/components/ui/page-title/page-title.module.scss
@@ -80,6 +80,12 @@
       border: 1px solid #0A0F2914; // Граница для green
     }
   }
+  .elit {
+    background-color: #FDEAD8;
+    p {
+      color: #AE590A;
+    }
+  }
 
   .top {
     display: flex;
