--- a/src/components/is-editing-bar/is-editing-bar.module.scss
+++ b/src/components/is-editing-bar/is-editing-bar.module.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: 0;
     background-color: #FEF4EC;
-    display: flex;
+    display: none;
     align-items: center;
     padding-left: 15px;
     overflow-y: hidden;
@@ -14,6 +14,17 @@
         font-weight: 500;
         font-size: 14px;
         color: #14151A;
+    }
+}
+.desktop {
+    display: flex;
+}
+@media screen and (max-width: 1000px) {
+    .desktop {
+        display: none !important;
+    }
+    .editingBar {
+        display: flex;
     }
 }
 .active {
