--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -99,3 +99,8 @@
    width: 20px;
    height: 20px;
 }
+@media screen and (max-width: 1000px) {
+   .navBarWrapper {
+       display: none;
+   }
+}
