--- a/src/components/tables/checks-table/ckecks-table.module.scss
+++ b/src/components/tables/checks-table/ckecks-table.module.scss
@@ -3,9 +3,11 @@
     margin-top: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
- }
+    border: 1px solid #dee0e3;
+    overflow-x: auto;
+}
 
- .search {
+.search {
     width: 100%;
     padding: 10px;
     border: 1px solid #dee0e3;
@@ -13,12 +15,13 @@
     border-radius: 5px 5px 0 0; /* Закругления только сверху */
     font-size: 16px;
     outline: none;
- }
+}
 
- .table {
+.table {
     width: 100%;
+    min-width: 1000px;
     border-collapse: collapse;
-    border: 1px solid #dee0e3;
+
     th,
     td {
        padding: 16px;
@@ -30,13 +33,36 @@
        font-weight: 400;
        color: #0F132499;
        background-color: #f8f8f8;
+       padding: 12px 16px;
+       white-space: nowrap;
     }
 
     td {
        color: #333;
-
-       &:last-child {
-          font-weight: bold;
+       white-space: nowrap;
+       
+       &:first-child {
+          min-width: 60px;
+       }
+       
+       &:nth-child(2) {
+          min-width: 160px;
+       }
+       
+       &:nth-child(3) {
+          min-width: 200px;
+       }
+       
+       &:nth-child(4) {
+          min-width: 100px;
+       }
+       
+       &:nth-child(5) {
+          min-width: 100px;
+       }
+       
+       &:nth-child(6), &:nth-child(7), &:nth-child(8) {
+          min-width: 140px;
        }
     }
 
@@ -57,8 +83,8 @@
           background-color: #f39c12;
        }
     }
- }
- .companyDiv {
+}
+.companyDiv {
     display: flex;
     flex-direction: column;
     .companyName {
@@ -83,8 +109,8 @@
        font-weight: 500;
        font-size: 14px;
     }
- }
- .clientDiv {
+}
+.clientDiv {
     display: flex;
     align-items: center;
     gap: 8px;
@@ -94,12 +120,12 @@
        font-weight: 500;
        font-size: 14px;
     }
- }
- .sum {
+}
+.sum {
     color: #14151A;
     font-size: 14px;;
     font-weight: 500;
- }
+}
 .vat {
     background-color: #F0F4FE;
 }
