--- a/src/layouts/panel-layout/panel-layout.module.scss
+++ b/src/layouts/panel-layout/panel-layout.module.scss
@@ -13,3 +13,13 @@
    border-radius: 10px;
    padding: 24px;
 }
+@media screen and (max-width: 1500px) {
+   .content {
+      width: 70%;
+      border: 0;
+      margin: 0;
+      padding: 16px !important;
+      padding-bottom: 90px !important;
+      // max-width: 1550px; 
+   }
+ }
