--- a/src/pages/application-detailed/application-detailed.module.scss
+++ b/src/pages/application-detailed/application-detailed.module.scss
@@ -1,90 +1,3 @@
-.comments {
-  transition: 0.3s;
-  width: 100%;
-  overflow-y: hidden;
-  height: 290px;
-  pointer-events: all;
-  border: 1px solid #dee0e3;
-  border-radius: 16px;
-  margin-top: 30px;
-  display: flex;
-  opacity: 1;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 20px;
-  .titleDiv {
-    h2 {
-      color: #14151a;
-      font-size: 18px;
-      font-weight: 500;
-    }
-    p {
-      margin-top: 5px;
-      color: rgba(15, 19, 36, 0.6);
-      font-size: 14px;
-      font-weight: 400;
-    }
-  }
-  .nothingFound {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    height: 80px;
-    p {
-      margin-top: 4px;
-      color: #14151a;
-      font-weight: 500;
-      font-size: 16px;
-    }
-  }
-  .inputContainer {
-    height: 60px;
-    width: 100%;
-    display: flex;
-    user-select: none;
-    justify-content: space-between;
-    align-items: flex-end;
-    .inputDiv {
-      padding: 10px 12px;
-      border-radius: 12px;
-      display: flex;
-      justify-content: space-between;
-      width: 96%;
-      border: 1px solid #dee0e3;
-      height: 40px;
-      input {
-        background-color: transparent;
-        border: none;
-        outline: none;
-        width: 97%;
-        font-size: 14px;
-      }
-      .send {
-        cursor: pointer;
-      }
-    }
-  }
-  .attachDiv {
-    border: 1px solid #dee0e3;
-    border-radius: 12px;
-    width: 40px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-}
-.hiddenComments {
-  pointer-events: none;
-  margin-top: 0;
-  height: 0 !important;
-  opacity: 0;
-  padding-top: 0;
-  padding-bottom: 0;
-}
-
 .applicationInfo {
   .title {
     margin-top: 20px;
@@ -235,5 +148,21 @@
     &:hover {
       background-color: #dfdfdf;
     }
+  }
+}
+
+.historySection {
+  margin-top: 32px;
+  
+  .title {
+    // font-size: 18px;
+    // font-weight: 500;
+    margin: 0 0 20px 0;
+    color: #14151A;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .infoList {
+    flex-wrap: wrap;
   }
 }
