--- a/src/components/select-group/select-group.module.scss
+++ b/src/components/select-group/select-group.module.scss
@@ -1,6 +1,16 @@
+.filterContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  margin: 24px 0;
+}
+
 .selectGroup {
-   display: flex;
-   gap: 12px;
-   flex-wrap: wrap;
-   margin: 24px 0px;
- }
+  display: flex;
+  gap: 12px;
+  flex-wrap: wrap;
+
+  [data-select-type="company"] {
+    min-width: 200px;
+  }
+}
