--- a/src/components/tables/active-table/active-table.module.scss
+++ b/src/components/tables/active-table/active-table.module.scss
@@ -48,6 +48,13 @@
       &:last-child {
          font-weight: bold;
       }
+
+      &:nth-child(2) {
+         text-align: left;
+         > div {
+            display: inline-flex;
+         }
+      }
    }
 
    .status {
@@ -109,4 +116,117 @@
    color: #14151A;
    font-size: 14px;;
    font-weight: 500;
+}
+
+.viewToggle {
+    display: none;
+    padding: 16px;
+    gap: 0;
+    justify-content: flex-end;
+}
+
+.toggleButton {
+    padding: 8px 12px;
+    border: 1px solid #dee0e3;
+    background: white;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0;
+
+    &:first-child {
+        border-radius: 8px 0 0 8px;
+    }
+
+    &:last-child {
+        border-radius: 0 8px 8px 0;
+        border-left: none;
+    }
+
+    &.active {
+        background: #924FE8;
+        border-color: #924FE8;
+        svg path {
+            fill: white;
+        }
+
+        &:not(:last-child) {
+            border-right: 1px solid #924FE8;
+        }
+    }
+}
+
+.cardsContainer {
+    display: none;
+}
+
+.card {
+    border: 1px solid #dee0e3;
+    border-radius: 10px;
+    padding: 16px;
+    background: white;
+    margin-bottom: 10px;
+}
+
+.cardHeader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 16px;
+}
+
+.cardId {
+    font-weight: 500;
+    color: #14151A;
+}
+
+.cardBody {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.cardRow {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.cardLabel {
+    color: #0F132499;
+    font-size: 14px;
+}
+
+@media (max-width: 600px) {
+    .viewToggle {
+        display: flex;
+    }
+    
+    .table[data-view-mode='cards'] {
+        display: none;
+    }
+    
+    .cardsContainer[data-view-mode='table'] {
+        display: none;
+    }
+    
+    .cardsContainer[data-view-mode='cards'] {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        padding: 16px;
+    }
+
+    .container[data-view-mode='cards'] {
+        background-color: transparent;
+        border: 0;
+        box-shadow: none;
+
+        .searchWrapper {
+            border-radius: 10px;
+            border: 1px solid #DEE0E3;
+            margin-bottom: 16px;
+        }
+    }
 }
