--- a/src/components/tables/checks-table/ckecks-table.module.scss
+++ b/src/components/tables/checks-table/ckecks-table.module.scss
@@ -21,6 +21,7 @@
     width: 100%;
     min-width: 1000px;
     border-collapse: collapse;
+    display: table;
 
     th,
     td {
@@ -138,4 +139,182 @@
     align-items: center;
     justify-content: flex-start;
     gap: 8px;
+}
+
+.viewToggle {
+    display: none;
+    padding: 16px;
+    gap: 0;
+    justify-content: flex-end;
+   //  border-bottom: 1px solid #dee0e3;
+}
+
+.toggleButton {
+    padding: 8px 12px;
+    border: 1px solid #dee0e3;
+    background: white;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0;
+
+    &:first-child {
+        border-radius: 8px 0 0 8px;
+    }
+
+    &:last-child {
+        border-radius: 0 8px 8px 0;
+        border-left: none;
+    }
+
+    &.active {
+        background: #924FE8;
+        border-color: #924FE8;
+        svg path {
+            fill: white;
+        }
+
+        &:not(:last-child) {
+            border-right: 1px solid #924FE8;
+        }
+    }
+}
+
+.cardsContainer {
+    display: none;
+}
+
+.card {
+    border: 1px solid #dee0e3;
+    border-radius: 10px;
+    padding: 16px;
+    background: white;
+    margin-bottom: 16px;
+}
+.SellerBuyer {
+   display: flex;
+   width: 100%;
+   justify-content: space-between;
+}
+.cardHeader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 16px;
+}
+
+.cardHeaderLeft, .cardHeaderRight {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.cardDivider {
+    height: 1px;
+    background-color: #dee0e3;
+    margin: 12px 0;
+}
+
+.cardBody {
+    display: flex;
+    flex-direction: column;
+}
+
+.cardSection {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+.divEnd {
+   display: flex;
+   flex-direction: column;
+   // gap: 15px;
+   width: 100%;
+   .cardRow2 {
+      margin: 12px 0px;
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+      gap: 3px;
+   }
+   .cardSection {
+      gap: 15px;
+      .cardRow {
+         flex-direction: row;
+         display: flex;
+         gap: 4px;
+         .cardLabel {
+            font-size: 14px;
+            color: #0D112666;
+         }
+         .cardValue {
+            font-size: 14px;
+            color: #14151A;
+         }
+      }
+   }
+}
+.cardRow {
+    display: flex;
+    flex-direction: column;
+//     justify-content: space-between;
+//     align-items: center;
+}
+.cardRowINN {
+   display: flex;
+   gap: 3px;
+   span {
+      color: #0F132499;
+      font-size: 12px;
+   }
+}
+.buyer, .seller {
+    font-weight: 500;
+    font-size: 14px;
+    margin-top: 3px;
+    text-decoration: underline;
+}
+.buyer {
+   color: #924FE8 !important;
+}
+.seller {
+   color: #4778F5 !important;
+}
+
+.cardLabel {
+    color: #0F132499;
+    font-size: 11px;
+    font-weight: 400;
+}
+
+.cardValue {
+    color: #14151A;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+@media (max-width: 600px) {
+    .viewToggle {
+        display: flex;
+    }
+    
+    .table[data-view-mode='cards'] {
+        display: none;
+    }
+    
+    .cardsContainer[data-view-mode='table'] {
+        display: none;
+    }
+    
+    .cardsContainer[data-view-mode='cards'] {
+        display: flex;
+        flex-direction: column;
+      //   padding: 16px;
+    }
+    .container[data-view-mode='cards'] {
+        background-color: transparent;
+        border: 0;
+        box-shadow: none;
+    }
 }
