--- a/src/components/tables/history-table/history-table.module.scss
+++ b/src/components/tables/history-table/history-table.module.scss
@@ -58,4 +58,102 @@
 .statusContainer {
   display: inline-block;
   margin-left: 4px;
+}
+
+.viewToggle {
+    display: none;
+    padding: 16px;
+    gap: 0;
+    justify-content: flex-end;
+}
+
+.toggleButton {
+    padding: 8px 12px;
+    border: 1px solid #dee0e3;
+    background: white;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 0;
+
+    &:first-child {
+        border-radius: 8px 0 0 8px;
+    }
+
+    &:last-child {
+        border-radius: 0 8px 8px 0;
+        border-left: none;
+    }
+
+    &.active {
+        background: #924FE8;
+        border-color: #924FE8;
+        svg path {
+            fill: white;
+        }
+
+        &:not(:last-child) {
+            border-right: 1px solid #924FE8;
+        }
+    }
+}
+
+.cardsContainer {
+    display: none;
+}
+
+.card {
+    border: 1px solid #dee0e3;
+    border-radius: 10px;
+    padding: 16px;
+    background: white;
+    margin-bottom: 10px;
+}
+
+.cardHeader {
+    margin-bottom: 12px;
+}
+
+.cardDate {
+    color: #0F132499;
+    font-size: 14px;
+}
+
+.cardBody {
+    color: #14151A;
+}
+
+.cardAction {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    flex-wrap: wrap;
+}
+
+@media (max-width: 600px) {
+    .viewToggle {
+        display: flex;
+    }
+    
+    .table[data-view-mode='cards'] {
+        display: none;
+    }
+    
+    .cardsContainer[data-view-mode='table'] {
+        display: none;
+    }
+    
+    .cardsContainer[data-view-mode='cards'] {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        // padding: 16px;
+    }
+
+    .container[data-view-mode='cards'] {
+        background-color: transparent;
+        border: 0;
+        box-shadow: none;
+    }
 } 
