--- a/src/layouts/panel-layout/panel-layout.module.scss
+++ b/src/layouts/panel-layout/panel-layout.module.scss
@@ -7,6 +7,7 @@
    flex-direction: column;
    flex-grow: 1;
    margin: 16px;
+   min-height: 97vh;
    background-color: white;
    border: 1px solid #DEE0E3;
    box-shadow: 0px 1px 2px 0px #14151A0D;
@@ -16,6 +17,7 @@
 @media screen and (max-width: 1500px) {
    .content {
       width: 70%;
+      min-height: 97vh;
       border: 0;
       margin: 0;
       padding: 16px !important;
