--- a/src/components/tables/active-table/active-table.module.scss
+++ b/src/components/tables/active-table/active-table.module.scss
@@ -384,7 +384,7 @@
 
 @media screen and (max-width: 768px) {
   .container {
-    position: absolute;
+    // position: absolute;
     left: 0;
     width: 100vw;
     border-radius: 0;
