--- a/src/components/ui/input/input.module.scss
+++ b/src/components/ui/input/input.module.scss
@@ -25,7 +25,7 @@
 
       .icon {
          position: absolute;
-         right: 10px; // Расположение иконки справа
+         right: 10px;
          top: 60%;
          transform: translateY(-50%);
          cursor: pointer;
