--- a/src/components/ui/page-title/page-title.module.scss
+++ b/src/components/ui/page-title/page-title.module.scss
@@ -102,8 +102,13 @@
   .top {
     display: flex;
     align-items: center;
-  }
 
+  }
+  .topUser {
+    @media screen and (max-width: 750px) {
+      flex-direction: row !important;
+    }
+  }
   .right {
     margin-left: 10px;
     display: flex;
